# RL-frameworks

./: .gitignore  analyze_runs.py  eval_acc.py  gh_clone.sh  launch_4algo_7b.sh  pyproject.toml  requirements.txt
docs/: FSDP_train.md  roadmap.md  vllm-tokenizer mismatch.md  vllm_sampler.md  vram.md
llm_rl/: config.py  eval.py  gradescope_bundle.py  train.py
llm_rl/models/: load.py  logprobs.py
llm_rl/rl/: base.py  cispo.py  dapo.py  grpo.py  gspo.py  reinforce.py
llm_rl/rollout/: hf_sampler.py  rollout_buffer.py  sampler_base.py  vllm_sampler.py
llm_rl/tasks/: base.py  format_copy.py  math_hard.py
llm_rl/training/: __init__.py  base.py  fsdp_backend.py  hf_backend.py
llm_rl/utils/: answer_parsing.py
