[project]
name = "llm-vllm-rollout"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "accelerate==1.13.0",
    "datasets==4.7.0",
    "modal==1.3.5",
    "numpy==2.2.6",
    "peft==0.18.1",
    "sentencepiece==0.2.1",
    "torch==2.10.0+cu128",
    "tqdm==4.67.3",
    "transformers==4.57.6",
    "vllm==0.17.0",
    "wandb==0.25.0",
]

[project.optional-dependencies]
flash = ["flash_attn==2.8.3"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
